[gd_scene load_steps=6 format=2]

[ext_resource path="res://prototype/objects/barrier.tscn" type="PackedScene" id=1]
[ext_resource path="res://prototype/player/player_test.tscn" type="PackedScene" id=2]
[ext_resource path="res://prototype/FailureArea.gd" type="Script" id=3]
[ext_resource path="res://prototype/test_main.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.2493, 231.511 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
obstacle = ExtResource( 1 )

[node name="invisible_barriers" type="Node2D" parent="."]
visible = false

[node name="RigidBody2D" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( -74.3624, 0.594601 )
active = false

[node name="RigidBody2D2" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( -73.1732, 162.921 )
active = false

[node name="RigidBody2D7" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 655.544, 0.594601 )
active = false

[node name="RigidBody2D8" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 656.733, 162.921 )
active = false

[node name="RigidBody2D3" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 108.812, 364.82 )
rotation = 1.57079
active = false

[node name="RigidBody2D4" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 309.788, 364.82 )
rotation = 1.57079
active = false

[node name="RigidBody2D5" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 511.359, 364.82 )
rotation = 1.57079
active = false

[node name="RigidBody2D6" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 710.551, 364.82 )
rotation = 1.57079
active = false

[node name="RigidBody2D9" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 102.078, -28.1026 )
rotation = 1.57079
active = false

[node name="RigidBody2D10" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 303.054, -28.1026 )
rotation = 1.57079
active = false

[node name="RigidBody2D11" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 504.624, -28.1026 )
rotation = 1.57079
active = false

[node name="RigidBody2D12" parent="invisible_barriers" instance=ExtResource( 1 )]
position = Vector2( 703.816, -28.1026 )
rotation = 1.57079
active = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.156863, 0.0392157, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star_fade" type="CPUParticles2D" parent="."]
position = Vector2( 320, 180 )
amount = 100
emission_shape = 2
emission_rect_extents = Vector2( 1200, 360 )
direction = Vector2( 0, 0 )
gravity = Vector2( -75, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 297.414, 45.6984 )
z_index = 3

[node name="Node2D" type="Node2D" parent="."]

[node name="FailureArea" type="Area2D" parent="Node2D"]
position = Vector2( -33.371, 173.529 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/FailureArea"]
shape = SubResource( 1 )

[node name="position_upper" type="Position2D" parent="."]
position = Vector2( 640, 0 )

[node name="position_lower" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="spawn_barrier" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="Node2D/FailureArea" to="Player" method="_on_FailureArea_body_entered"]
[connection signal="timeout" from="spawn_barrier" to="." method="_on_spawn_barrier_timeout"]
